 - [DS-103] Use of the Progress bar button don't save the current page modification
 - [DS-104] Cancel/save button during edit of a workflow item doesn't work
 - [DS-105] Initial Questions button in the progress bar doesn't work in workflow
 - [DS-106] Save & exit button doesn't properly work in workflow
 
(Paulo Jobim)
 - SF Patch [2655052] Authors re-ordered when item edited (xmlui)

1.5.1 final
===========

(Scott Philips)
- (Scott Phillips) Fixed bug where users could not finish registering nor reset 
  their password because the authentication method signatures were changed.
- Jay Paz (SF#1898241) Additional fixes to patch to enable reuse of methods.
- Added the ability to manage sessions with site wide alerts to prevent users from authenticating.
- Fixes a bug where the ability to edit an item durring workflow step 2 is not displayed.
- Jay Paz (SF#1898241) Add item Export from jspui and xmlui.
- Added easy support for google analytics statistics
- Added the ability for super admins to login as other users. 
- Added an activity viewer to the Control Panel

(Mark Diggory) 
- Fix for SF Bug #2082236 Subscription notification (sub-daily) no emails sent
- [2102580] William Hays: Duplicate Handle exception when replacing bitstreams
- [2102617] Sands Fish: X509Authentication fails to assign appropriate specialgroups
- (Sands Fish) Add "Select Primary Bitstream" functionality to submission workflow
- Guard against Community/Collection metadata having only whitespace characters 
  and eliminate cases where null pointer exceptions would be thrown
- Improve DSIndexer logic in both branches to support removal of items from index 
  when withdrawn from repository.
- (Sands Fish) Provides fix for AuthenticationUtil where users ID's are not properly compared.
- Fix NullPointerException cause by nullified Context object in LNI map item to new collection.
- Block Basic Authentication &quot;details&quot; from being exposed in dspace logs.